@startuml

namespace al5d_cpp {
	class ConsoleTrait <<AL5DBaseTrait>> {
		+ ConsoleTrait(config : AL5DBaseConfig)
		+ transmit_command_terminator_() : void
	}

	class ConsoleCommunicator <<CommunicatorBase>> {
		+ ConsoleCommunicator()
		+ transmit(message : String) : void
		+ {static} as_pointer() : CommunicatorBase
		- {static} log_connecting() : void
	}

    class LambdaTrait <<AL5DBaseTrait>> {
		+ LambdaTrait(config : AL5DBaseConfig)
		+ set_transmit_fn(transmit_fn : al5d_cpp::TransmitFn) : void
	}

	class LambdaCommunicator <<CommunicatorBase>> {
		+ LambdaCommunicator()
		+ set_transmit_fn(transmit_fn : al5d_cpp::TransmitFn) : void
		+ transmit(message : String) : void
		+ {static} as_pointer() : CommunicatorBase
		- transmit_fn : al5d_cpp::TransmitFn
		- {static} log_connecting() : void
	}

	class SerialCommunicator <<CommunicatorBase>> {
		+ SerialCommunicator(...)
		+ is_connected() : bool
		+ transmit(message : String) : void
		+ {static} as_pointer(...) : CommunicatorBase
		- serial : serial::Serial
		- timer_ptr : Timer
		- {static} log_connecting(...) : void
	}

    class SerialTrait <<AL5DBaseTrait>> {
		+ SerialTrait(config : AL5DBaseConfig)
		- connect() : void
		- serial_baud_rate : serial::BaudRate
		- serial_port : serial::Port
	}

    ConsoleTrait ..> ConsoleCommunicator
    LambdaTrait ..> LambdaCommunicator
    SerialTrait ..> SerialCommunicator
}

@enduml
